import React from 'react';
import { Wall } from './Wall';
import renderer from 'react-test-renderer';

it('should render Wall without crashing', () => {
  const tree = renderer.create(<Wall wall={[]} status="PLAYING" />).toJSON();

  expect(tree).toMatchSnapshot();
});

it('should render Wall with 2 Blocks', () => {
  const wall = [2,4]
  const tree = renderer.create(<Wall wall={wall} status="PLAYING" />).toJSON();

  expect(tree).toMatchSnapshot();
});

it('should render Wall adding the className hardMode', () => {
  const tree = renderer.create(<Wall wall={[]} status="PLAYING" hardMode={true}/>).toJSON();

  expect(tree).toMatchSnapshot();
});

it('should render Wall adding the className moveError', () => {
  const tree = renderer.create(<Wall wall={[]} status="PLAYING" moveError={true}/>).toJSON();

  expect(tree).toMatchSnapshot();
});

it('should render Wall adding the className hardMode moveError separeted by space', () => {
  const tree = renderer.create(<Wall wall={[]} status="PLAYING" hardMode={true} moveError={true}/>).toJSON();

  expect(tree).toMatchSnapshot();
});
